--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --reporter spec"
   },
   "author": "Anota AI",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.3",
-    "nodemon": "^2.0.2",
+    "mocha": "^7.1.2",
+    "mongoose": "^5.9.11",
+    "nodemon": "^2.0.3",
     "q": "^1.5.1"
   }
 }
